--- a/templates/CRM/parts/navbar.html
+++ b/templates/CRM/parts/navbar.html
@@ -1,4 +1,7 @@
 {% load staticfiles %}
+
+{% with request.user as user %}
+
 <!-- partial:partials/_navbar.html -->
 <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
     <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
@@ -143,8 +146,8 @@
             <li class="nav-item dropdown d-none d-xl-inline-block">
                 <a class="nav-link dropdown-toggle" id="UserDropdown" href="#" data-toggle="dropdown"
                    aria-expanded="false">
-                    <span class="profile-text">Hello, Richard V.Welsh !</span>
-                    <img class="img-xs rounded-circle" src="{% static 'CRM/images/faces/face1.jpg' %}" alt="Profile image">
+                    <span class="profile-text">Salut, {{ user.first_name | safe }} {{ user.last_name | safe }}!</span>
+                    <img class="img-xs rounded-circle" src="{{ user.client.person.image.url }}" alt="Profile image">
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
                     <a class="dropdown-item p-0">
@@ -161,17 +164,17 @@
                         </div>
                     </a>
                     <a class="dropdown-item mt-2">
-                        Manage Accounts
+                        Gerer Mes Comptes
                     </a>
                     <a class="dropdown-item">
-                        Change Password
+                        Paramétres Compte
                     </a>
-                    <a class="dropdown-item">
-                        Check Inbox
-                    </a>
-                    <a class="dropdown-item">
-                        Sign Out
-                    </a>
+                    <form method="POST" action="{% url 'crm:logout' %}">
+                        {% csrf_token %}
+                    <button type="submit" class="dropdown-item" style="cursor: pointer">
+                        <i class="fas fa-sign-out-alt"></i> Se Déconnecter
+                    </button>
+                    </form>
                 </div>
             </li>
         </ul>
@@ -181,3 +184,5 @@
         </button>
     </div>
 </nav>
+
+{% endwith %}
