--- a/templates/CRM/parts/loginForm.html
+++ b/templates/CRM/parts/loginForm.html
@@ -46,6 +46,6 @@
 
     </div>
     <div class="form-group">
-        <button class="btn btn-primary submit-btn btn-block">Se connecter</button>
+        <button class="btn btn-primary submit-btn btn-block"><i class="fas fa-sign-in-alt"></i> Se connecter</button>
     </div>
 </form>
