--- a/templates/CRM/parts/sidebar.html
+++ b/templates/CRM/parts/sidebar.html
@@ -6,13 +6,14 @@
             <div class="nav-link">
                 <div class="user-wrapper">
                     <div class="profile-image">
-                        <img src="{{ request.user.person.image.url }}" class="img-xs rounded-circle" alt="profile image">
+                        <img src="{{ request.user.person.image.url }}" class="img-xs rounded-circle"
+                             alt="profile image">
                     </div>
                     <div class="text-wrapper">
                         <p class="profile-name">{{ request.user.person.full_name }}</p>
                         <div>
                             <small class="designation text-muted">
-                                {% if request.user.person.employe is not None %}
+                                {% if client is None %}
                                     Employe
                                 {% else %}
                                     Client
@@ -27,24 +28,26 @@
                 </button>
             </div>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'crm:transactions' %}">
-                <i class="menu-icon mdi mdi-transfer"></i>
-                <span class="menu-title">Transactions</span>
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'crm:withdrawals' %}">
-                <i class="menu-icon mdi mdi-minus-box-outline"></i>
-                <span class="menu-title">Retraits</span>
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'crm:payments' %}">
-                <i class="menu-icon mdi mdi-plus-outline"></i>
-                <span class="menu-title">Versements</span>
-            </a>
-        </li>
+        {% if client is not None %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'crm:transactions' %}">
+                    <i class="menu-icon mdi mdi-transfer"></i>
+                    <span class="menu-title">Transactions</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'crm:withdrawals' %}">
+                    <i class="menu-icon mdi mdi-minus-box-outline"></i>
+                    <span class="menu-title">Retraits</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'crm:payments' %}">
+                    <i class="menu-icon mdi mdi-plus-outline"></i>
+                    <span class="menu-title">Versements</span>
+                </a>
+            </li>
+        {% endif %}
         <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                 <i class="menu-icon mdi mdi-content-copy"></i>
