--- a/templates/CRM/transactions.html
+++ b/templates/CRM/transactions.html
@@ -10,18 +10,31 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Liste des transactions</h4>
+
+                            <a href="{% url 'crm:add_transaction' %}">
+                                <button type="button" class="btn btn-success btn-fw">
+                                    <span class="mdi mdi-tag-plus"></span> Transferer l'argent
+                                </button>
+                            </a>
+
+                            <div class="row mt-4">
+                                <div class="col-md-12">
+                                    {% include 'CRM/messages.html' %}
+                                </div>
+                            </div>
+
                             <div class="table-responsive">
                                 <table class="table table-striped">
                                     <thead>
-                                    <tr>
+                                    <tr align="center">
                                         <th>
-                                            Nom d'utilisateur
+                                            Numero de transaction
                                         </th>
                                         <th>
-                                            Nom Complet
+                                            Compte Emetteur
                                         </th>
                                         <th>
-                                            Progression
+                                            Compte Recepteur
                                         </th>
                                         <th>
                                             Montant
@@ -33,42 +46,33 @@
                                     </thead>
                                     <tbody>
                                     {% for transaction in transactions %}
+                                        {% include 'CRM/parts/transaction_modal.html' %}
                                         <tr>
                                             <td class="py-1">
-                                                {% if transaction.sender_account.id == user.person.client.id %}
-                                                    <img src="{{ transaction.receiver_account.client.person.image.url }}"
-                                                         alt="image"/>
-                                                    {{ transaction.receiver_account.client.person.user.username }}
-                                                {% else %}
+                                                <span class="mdi mdi-account"></span>{{ transaction.number }}
+                                            </td>
+                                            <td align="center">
+                                                <a href="javascript:void(0)"  data-toggle="modal" data-target="#senderModal{{ transaction.pk }}">
                                                     <img src="{{ transaction.sender_account.client.person.image.url }}"
-                                                         alt="image"/>
-                                                    {{ transaction.sender_account.client.person.user.username }}
-                                                {% endif %}
+                                                         alt="{{ transaction.sender_account.client.person.full_name }}"> {{ transaction.sender_account.credit_card }}
+                                                </a>
                                             </td>
-                                            <td>
-                                                {% if transaction.sender_account.id == user.person.client.id %}
-                                                    {{ transaction.receiver_account.client.person.full_name }}
-                                                {% else %}
-                                                    {{ transaction.sender_account.client.person.full_name }}
-                                                {% endif %}
+                                            <td align="center">
+                                                <a href="javascript:void(0)"  data-toggle="modal" data-target="#receiverModal{{ transaction.pk }}">
+                                                    <img src="{{ transaction.receiver_account.client.person.image.url }}"
+                                                         alt="{{ transaction.receiver_account.client.person.full_name }}"> {{ transaction.receiver_account.credit_card }}
+                                                </a>
                                             </td>
-                                            <td>
-                                                <div class="progress">
-                                                    <div class="progress-bar bg-success" role="progressbar"
-                                                         style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                                                         aria-valuemax="100"></div>
-                                                </div>
-                                            </td>
-                                            <td>
+                                            <td align="center">
                                                 {{ transaction.amount }} Dh
                                             </td>
-                                            <td>
+                                            <td align="center">
                                                 {{ transaction.date | date:"l d b Y" }}
                                             </td>
                                         </tr>
                                     {% empty %}
                                         <tr>
-                                            <td colspan="5">
+                                            <td colspan="6">
                                                 <div class="alert alert-info text-center font-weight-bold">
                                                     <span class="mdi mdi-alert-box"></span> Aucune Transaction n'a été
                                                     éffectué
@@ -76,131 +80,6 @@
                                             </td>
                                         </tr>
                                     {% endfor %}
-                                    <tr>
-                                        <td class="py-1">
-                                            <img src="../../images/faces-clipart/pic-2.png" alt="image"/>
-                                        </td>
-                                        <td>
-                                            Messsy Adam
-                                        </td>
-                                        <td>
-                                            <div class="progress">
-                                                <div class="progress-bar bg-danger" role="progressbar"
-                                                     style="width: 75%" aria-valuenow="75" aria-valuemin="0"
-                                                     aria-valuemax="100"></div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            $245.30
-                                        </td>
-                                        <td>
-                                            July 1, 2015
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="py-1">
-                                            <img src="../../images/faces-clipart/pic-3.png" alt="image"/>
-                                        </td>
-                                        <td>
-                                            John Richards
-                                        </td>
-                                        <td>
-                                            <div class="progress">
-                                                <div class="progress-bar bg-warning" role="progressbar"
-                                                     style="width: 90%" aria-valuenow="90" aria-valuemin="0"
-                                                     aria-valuemax="100"></div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            $138.00
-                                        </td>
-                                        <td>
-                                            Apr 12, 2015
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="py-1">
-                                            <img src="../../images/faces-clipart/pic-4.png" alt="image"/>
-                                        </td>
-                                        <td>
-                                            Peter Meggik
-                                        </td>
-                                        <td>
-                                            <div class="progress">
-                                                <div class="progress-bar bg-primary" role="progressbar"
-                                                     style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                                     aria-valuemax="100"></div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            $ 77.99
-                                        </td>
-                                        <td>
-                                            May 15, 2015
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="py-1">
-                                            <img src="../../images/faces-clipart/pic-1.png" alt="image"/>
-                                        </td>
-                                        <td>
-                                            Edward
-                                        </td>
-                                        <td>
-                                            <div class="progress">
-                                                <div class="progress-bar bg-danger" role="progressbar"
-                                                     style="width: 35%" aria-valuenow="35" aria-valuemin="0"
-                                                     aria-valuemax="100"></div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            $ 160.25
-                                        </td>
-                                        <td>
-                                            May 03, 2015
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="py-1">
-                                            <img src="../../images/faces-clipart/pic-2.png" alt="image"/>
-                                        </td>
-                                        <td>
-                                            John Doe
-                                        </td>
-                                        <td>
-                                            <div class="progress">
-                                                <div class="progress-bar bg-info" role="progressbar" style="width: 65%"
-                                                     aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            $ 123.21
-                                        </td>
-                                        <td>
-                                            April 05, 2015
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="py-1">
-                                            <img src="../../images/faces-clipart/pic-3.png" alt="image"/>
-                                        </td>
-                                        <td>
-                                            Henry Tom
-                                        </td>
-                                        <td>
-                                            <div class="progress">
-                                                <div class="progress-bar bg-warning" role="progressbar"
-                                                     style="width: 20%" aria-valuenow="20" aria-valuemin="0"
-                                                     aria-valuemax="100"></div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            $ 150.00
-                                        </td>
-                                        <td>
-                                            June 16, 2015
-                                        </td>
-                                    </tr>
                                     </tbody>
                                 </table>
                             </div>
